[gd_scene load_steps=12 format=3 uid="uid://d4esbmy5okqdj"]

[ext_resource type="FontFile" uid="uid://c2lvtb2jwo8e6" path="res://assets/fonts/BadComic-Regular.ttf" id="1_4xiuf"]
[ext_resource type="Script" uid="uid://b62riw8s5e5gr" path="res://scripts/systems/back_button.gd" id="2_usedd"]
[ext_resource type="AudioStream" uid="uid://d3wr2rtrgtrme" path="res://assets/audio/sfx/ui/Negative_Beep.ogg" id="3_3ivo2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vrryg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lkg56"]
bg_color = Color(1, 0.45098, 0.392157, 1)
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrq6v"]
bg_color = Color(1, 0.45098, 0.392157, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrryg"]
bg_color = Color(0.839216, 0.392157, 0.313726, 1)
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_usedd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4xiuf"]
resource_name = "appear"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3ivo2"]
resource_name = "disappear"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b086t"]
_data = {
&"RESET": SubResource("Animation_usedd"),
&"appear": SubResource("Animation_4xiuf"),
&"disappear": SubResource("Animation_3ivo2")
}

[node name="BackButton" type="Button"]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -40.5
offset_right = 72.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(73.5, 41.5)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_4xiuf")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_vrryg")
theme_override_styles/hover = SubResource("StyleBoxFlat_lkg56")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lrq6v")
theme_override_styles/normal = SubResource("StyleBoxFlat_vrryg")
text = "X"
script = ExtResource("2_usedd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b086t")
}

[node name="close_sfx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_3ivo2")
bus = &"SFX"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
